--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,6 @@ jobs:
     strategy:
       matrix:
         configuration: [Debug, Release]
-        arch: [x64, x86]
 
     runs-on: ubuntu-latest
 
@@ -26,6 +25,6 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore /p:Configuration=${{matrix.configuration}} /p:Platform=${{matrix.arch}}
+      run: dotnet restore /p:Configuration=${{matrix.configuration}}
     - name: Build
-      run: dotnet build --no-restore /p:Configuration=${{matrix.configuration}} /p:Platform=${{matrix.arch}}
+      run: dotnet build --no-restore /p:Configuration=${{matrix.configuration}}
