--- a/fastsharp/fastsharp.csproj
+++ b/fastsharp/fastsharp.csproj
@@ -5,6 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>FastSharp</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Silk.NET.Direct3D11" Version="2.17.1" />
+    <PackageReference Include="Silk.NET.DXGI" Version="2.17.1" />
+    <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.17.1" />
+  </ItemGroup>
 
 </Project>
