--- a/fastsharp/fastsharp.csproj
+++ b/fastsharp/fastsharp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Silk.NET.Direct3D.Compilers" Version="2.17.1" />
     <PackageReference Include="Silk.NET.Direct3D11" Version="2.17.1" />
     <PackageReference Include="Silk.NET.DXGI" Version="2.17.1" />
     <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.17.1" />
