--- a/fastsharp/fastsharp.csproj
+++ b/fastsharp/fastsharp.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.0" />
     <PackageReference Include="Silk.NET.Direct3D.Compilers" Version="2.17.1" />
     <PackageReference Include="Silk.NET.Direct3D11" Version="2.17.1" />
     <PackageReference Include="Silk.NET.DXGI" Version="2.17.1" />
