Add test shader and refactor shaders a little bit

--- a/fastsharp.TestProject/fastsharp.TestProject.csproj
+++ b/fastsharp.TestProject/fastsharp.TestProject.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\fastsharp\fastsharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Shaders\TestComputeShader.hlsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
