--- a/fastsharp.TestProject/fastsharp.TestProject.csproj
+++ b/fastsharp.TestProject/fastsharp.TestProject.csproj
@@ -7,7 +7,12 @@
     <Nullable>enable</Nullable>
     <RootNamespace>FastSharp</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Evergine.Bindings.RenderDoc" Version="2022.11.30.14" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\fastsharp\fastsharp.csproj" />
