--- a/fastsharp/fastsharp.csproj
+++ b/fastsharp/fastsharp.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <RootNamespace>FastSharp</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
