--- a/fastsharp.Tests/fastsharp.Tests.csproj
+++ b/fastsharp.Tests/fastsharp.Tests.csproj
@@ -5,6 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
+    <RootNamespace>FastSharp</RootNamespace>
+    <LangVersion>preview</LangVersion>
+
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
@@ -15,6 +18,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\fastsharp\fastsharp.csproj" />
   </ItemGroup>
 
 </Project>
