--- a/fastsharp.Tests/fastsharp.Tests.csproj
+++ b/fastsharp.Tests/fastsharp.Tests.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\fastsharp\fastsharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TextureTests\ComputeShader.hlsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
