Refactor and fix bugs with StagingTexture1D/2D and Texture1D/2D Start removing more stuff from TestProject Rename ComputeShader.hlsl to ImmutableComputeShader.hlsl

--- a/fastsharp.Tests/fastsharp.Tests.csproj
+++ b/fastsharp.Tests/fastsharp.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="TextureTests\ComputeShader.hlsl">
+    <None Update="TextureTests\ImmutableComputeShader.hlsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
